--- a/src/main/resources/languages/french.yml
+++ b/src/main/resources/languages/french.yml
@@ -10,7 +10,7 @@ cosmetics:
   musics-desc: "\n§7Requiert le grade §eVIP"
   gui-musics: "§c§lEndoSkull §8» §d§lMusiques"
   stop-music: "§cArrêter la musique"
-  you-stop-music: "§eEndoSkull §8>> §7Vous avez enlever la musique"
+  you-stop-music: "§eEndoSkull §8>> §7Vous avez enlevé la musique"
   gui-particles: "§c§lEndoSkull §8» §d§lParticules"
   show-particles: "§aAfficher les particules"
   hide-particles: "§cCacher les particules"
@@ -21,7 +21,7 @@ cosmetics:
   you-select-particle: "§eEndoSkull §8>> §7Vous avez sélectionné la particule §e{particle}"
   particle-price: "\n\n§e➜ Prix: {price}"
   remove-particle: "§cEnlever la particule"
-  you-remove-particle: "§eEndoSkull §8>> §7Vous avez enlever votre particule"
+  you-remove-particle: "§eEndoSkull §8>> §7Vous avez enlevé votre particule"
   gui-particle-confirm: "§c§lEndoSkull §8» §a§lConfirmation"
   particle-buy: "§aAcheter"
   particle-less-money: "§eEndoSkull §8>> §cVous n'avez pas assez de money"
