--- a/src/main/resources/languages/french.yml
+++ b/src/main/resources/languages/french.yml
@@ -56,7 +56,7 @@ cosmetics:
   yellow: "Jaune"
   dark-green: "Vert Foncé"
   green: "Vert"
-  aqua: "aqua"
+  aqua: "Aqua"
   dark-aqua: "Cyan"
   dark-blue: "Bleu Foncé"
   blue: "Bleu"
